// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given there are no surveys available in blaise should render the page correctly when no surveys are returned 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          Bonjour tout le monde Jake Bullet
        </div>
      </div>
      <div
        data-testid="Surveys"
      >
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-panel--spacious ons-u-mt-m"
        >
          <div
            class="ons-panel__body "
          >
            There are no surveys available
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
    >
      <div
        class="ons-panel__body "
      >
        Bonjour tout le monde Jake Bullet
      </div>
    </div>
    <div
      data-testid="Surveys"
    >
      <div
        class="ons-panel ons-panel--info ons-panel--no-title ons-panel--spacious ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          There are no surveys available
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given there are surveys available in blaise should render the manager page correctly when surveys are returned 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          Bonjour tout le monde Jake Bullet
        </div>
      </div>
      <div
        data-testid="Surveys"
      >
        <br />
        <div
          class="ons-accordion"
          id="accordion"
        >
          <button
            class="ons-btn ons-js-collapsible-all ons-u-mb-s ons-btn--secondary ons-btn--small"
            data-close-all="Hide all"
            data-group="accordion"
            data-testid="accordion-show-all"
            type="button"
          >
            <span
              class="ons-btn__inner ons-js-collapsible-all-inner"
            >
              Show all
            </span>
          </button>
          <details
            class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
            data-btn-close="Hide"
            data-group="accordion"
            id="accordion-0"
          >
            <summary
              aria-controls="accordion-0"
              aria-expanded="false"
              class="ons-collapsible__heading ons-js-collapsible-heading"
              data-ga-action="Open panel"
              data-testid="accordion-0-heading"
              role="link"
              tabindex="0"
            >
              <div
                class="ons-collapsible__controls"
              >
                <h2
                  class="ons-collapsible__title"
                >
                  LMS
                </h2>
                <span
                  class="ons-collapsible__icon"
                >
                  <svg
                    class="ons-svg-icon"
                    focusable="false"
                    viewBox="0 0 7.5 12.85"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                      transform="translate(-5.02 -1.59)"
                    />
                  </svg>
                </span>
              </div>
            </summary>
            <div
              aria-hidden="true"
              class="ons-collapsible__content ons-js-collapsible-content"
              data-testid="accordion-0-content"
              id="accordion-0-content"
            >
              <div>
                <br />
                <div
                  class="ons-summary"
                >
                  <div
                    class="ons-summary__group"
                    id="turnover"
                  >
                    <h2
                      class="ons-summary__group-title"
                    >
                      LMS2101_AA1
                    </h2>
                    <div
                      class="ons-summary__items"
                    >
                      <div
                        class="ons-summary__item"
                        id="sales-dates-row"
                      >
                        <dl
                          class="ons-summary__row ons-summary__row--has-values"
                          id="sales-dates"
                        >
                          <dt
                            class="ons-summary__item-title"
                          >
                            <div
                              class="ons-summary__item--text"
                            >
                              Cases Allocted
                            </div>
                          </dt>
                          <dd
                            class="ons-summary__values"
                          >
                            <span
                              class="ons-summary__text"
                            >
                              3
                            </span>
                          </dd>
                          <dd
                            class="ons-summary__actions"
                          >
                            <span
                              aria-hidden="true"
                              class="ons-summary__button-text"
                            >
                              <a
                                href="/questionnaires/LMS2101_AA1/allocation/allocated"
                                style="font-weight: normal;"
                              >
                                Cases allocated to editors
                              </a>
                            </span>
                            <span
                              class="ons-u-vh"
                            >
                              Cases allocated to editors
                            </span>
                          </dd>
                        </dl>
                      </div>
                      <div
                        class="ons-summary__item"
                        id="sales-value-row"
                      >
                        <dl
                          class="ons-summary__row ons-summary__row--has-values"
                          id="sales-value"
                        >
                          <dt
                            class="ons-summary__item-title"
                          >
                            <div
                              class="ons-summary__item--text"
                            >
                              Cases left to allocate
                            </div>
                          </dt>
                          <dd
                            class="ons-summary__values"
                          >
                            <span
                              class="ons-summary__text"
                            >
                              0
                               
                            </span>
                          </dd>
                          <dd
                            class="ons-summary__actions"
                          >
                            <span
                              aria-hidden="true"
                              class="ons-summary__button-text"
                            >
                              <a
                                href="/questionnaires/LMS2101_AA1/allocation/allocate"
                                style="font-weight: normal;"
                              >
                                Allocate Cases to editors
                              </a>
                            </span>
                            <span
                              class="ons-u-vh"
                            >
                              Allocate Cases to editors
                            </span>
                          </dd>
                        </dl>
                      </div>
                    </div>
                  </div>
                </div>
                <hr />
              </div>
              <div>
                <br />
                <div
                  class="ons-summary"
                >
                  <div
                    class="ons-summary__group"
                    id="turnover"
                  >
                    <h2
                      class="ons-summary__group-title"
                    >
                      LMS2101_AB1
                    </h2>
                    <div
                      class="ons-summary__items"
                    >
                      <div
                        class="ons-summary__item"
                        id="sales-dates-row"
                      >
                        <dl
                          class="ons-summary__row ons-summary__row--has-values"
                          id="sales-dates"
                        >
                          <dt
                            class="ons-summary__item-title"
                          >
                            <div
                              class="ons-summary__item--text"
                            >
                              Cases Allocted
                            </div>
                          </dt>
                          <dd
                            class="ons-summary__values"
                          >
                            <span
                              class="ons-summary__text"
                            >
                              1
                            </span>
                          </dd>
                          <dd
                            class="ons-summary__actions"
                          >
                            <span
                              aria-hidden="true"
                              class="ons-summary__button-text"
                            >
                              <a
                                href="/questionnaires/LMS2101_AB1/allocation/allocated"
                                style="font-weight: normal;"
                              >
                                Cases allocated to editors
                              </a>
                            </span>
                            <span
                              class="ons-u-vh"
                            >
                              Cases allocated to editors
                            </span>
                          </dd>
                        </dl>
                      </div>
                      <div
                        class="ons-summary__item"
                        id="sales-value-row"
                      >
                        <dl
                          class="ons-summary__row ons-summary__row--has-values"
                          id="sales-value"
                        >
                          <dt
                            class="ons-summary__item-title"
                          >
                            <div
                              class="ons-summary__item--text"
                            >
                              Cases left to allocate
                            </div>
                          </dt>
                          <dd
                            class="ons-summary__values"
                          >
                            <span
                              class="ons-summary__text"
                            >
                              0
                               
                            </span>
                          </dd>
                          <dd
                            class="ons-summary__actions"
                          >
                            <span
                              aria-hidden="true"
                              class="ons-summary__button-text"
                            >
                              <a
                                href="/questionnaires/LMS2101_AB1/allocation/allocate"
                                style="font-weight: normal;"
                              >
                                Allocate Cases to editors
                              </a>
                            </span>
                            <span
                              class="ons-u-vh"
                            >
                              Allocate Cases to editors
                            </span>
                          </dd>
                        </dl>
                      </div>
                    </div>
                  </div>
                </div>
                <hr />
              </div>
              <div>
                <br />
                <div
                  class="ons-summary"
                >
                  <div
                    class="ons-summary__group"
                    id="turnover"
                  >
                    <h2
                      class="ons-summary__group-title"
                    >
                      LMS2101_AC1
                    </h2>
                    <div
                      class="ons-summary__items"
                    >
                      <div
                        class="ons-summary__item"
                        id="sales-dates-row"
                      >
                        <dl
                          class="ons-summary__row ons-summary__row--has-values"
                          id="sales-dates"
                        >
                          <dt
                            class="ons-summary__item-title"
                          >
                            <div
                              class="ons-summary__item--text"
                            >
                              Cases Allocted
                            </div>
                          </dt>
                          <dd
                            class="ons-summary__values"
                          >
                            <span
                              class="ons-summary__text"
                            >
                              0
                            </span>
                          </dd>
                          <dd
                            class="ons-summary__actions"
                          >
                            <span
                              aria-hidden="true"
                              class="ons-summary__button-text"
                            >
                              <a
                                href="/questionnaires/LMS2101_AC1/allocation/allocated"
                                style="font-weight: normal;"
                              >
                                Cases allocated to editors
                              </a>
                            </span>
                            <span
                              class="ons-u-vh"
                            >
                              Cases allocated to editors
                            </span>
                          </dd>
                        </dl>
                      </div>
                      <div
                        class="ons-summary__item"
                        id="sales-value-row"
                      >
                        <dl
                          class="ons-summary__row ons-summary__row--has-values"
                          id="sales-value"
                        >
                          <dt
                            class="ons-summary__item-title"
                          >
                            <div
                              class="ons-summary__item--text"
                            >
                              Cases left to allocate
                            </div>
                          </dt>
                          <dd
                            class="ons-summary__values"
                          >
                            <span
                              class="ons-summary__text"
                            >
                              0
                               
                            </span>
                          </dd>
                          <dd
                            class="ons-summary__actions"
                          >
                            <span
                              aria-hidden="true"
                              class="ons-summary__button-text"
                            >
                              <a
                                href="/questionnaires/LMS2101_AC1/allocation/allocate"
                                style="font-weight: normal;"
                              >
                                Allocate Cases to editors
                              </a>
                            </span>
                            <span
                              class="ons-u-vh"
                            >
                              Allocate Cases to editors
                            </span>
                          </dd>
                        </dl>
                      </div>
                    </div>
                  </div>
                </div>
                <hr />
              </div>
            </div>
          </details>
          <details
            class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
            data-btn-close="Hide"
            data-group="accordion"
            id="accordion-1"
          >
            <summary
              aria-controls="accordion-1"
              aria-expanded="false"
              class="ons-collapsible__heading ons-js-collapsible-heading"
              data-ga-action="Open panel"
              data-testid="accordion-1-heading"
              role="link"
              tabindex="0"
            >
              <div
                class="ons-collapsible__controls"
              >
                <h2
                  class="ons-collapsible__title"
                >
                  OPN
                </h2>
                <span
                  class="ons-collapsible__icon"
                >
                  <svg
                    class="ons-svg-icon"
                    focusable="false"
                    viewBox="0 0 7.5 12.85"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                      transform="translate(-5.02 -1.59)"
                    />
                  </svg>
                </span>
              </div>
            </summary>
            <div
              aria-hidden="true"
              class="ons-collapsible__content ons-js-collapsible-content"
              data-testid="accordion-1-content"
              id="accordion-1-content"
            >
              <div>
                <br />
                <div
                  class="ons-summary"
                >
                  <div
                    class="ons-summary__group"
                    id="turnover"
                  >
                    <h2
                      class="ons-summary__group-title"
                    >
                      OPN2201A
                    </h2>
                    <div
                      class="ons-summary__items"
                    >
                      <div
                        class="ons-summary__item"
                        id="sales-dates-row"
                      >
                        <dl
                          class="ons-summary__row ons-summary__row--has-values"
                          id="sales-dates"
                        >
                          <dt
                            class="ons-summary__item-title"
                          >
                            <div
                              class="ons-summary__item--text"
                            >
                              Cases Allocted
                            </div>
                          </dt>
                          <dd
                            class="ons-summary__values"
                          >
                            <span
                              class="ons-summary__text"
                            >
                              3
                            </span>
                          </dd>
                          <dd
                            class="ons-summary__actions"
                          >
                            <span
                              aria-hidden="true"
                              class="ons-summary__button-text"
                            >
                              <a
                                href="/questionnaires/OPN2201A/allocation/allocated"
                                style="font-weight: normal;"
                              >
                                Cases allocated to editors
                              </a>
                            </span>
                            <span
                              class="ons-u-vh"
                            >
                              Cases allocated to editors
                            </span>
                          </dd>
                        </dl>
                      </div>
                      <div
                        class="ons-summary__item"
                        id="sales-value-row"
                      >
                        <dl
                          class="ons-summary__row ons-summary__row--has-values"
                          id="sales-value"
                        >
                          <dt
                            class="ons-summary__item-title"
                          >
                            <div
                              class="ons-summary__item--text"
                            >
                              Cases left to allocate
                            </div>
                          </dt>
                          <dd
                            class="ons-summary__values"
                          >
                            <span
                              class="ons-summary__text"
                            >
                              0
                               
                            </span>
                          </dd>
                          <dd
                            class="ons-summary__actions"
                          >
                            <span
                              aria-hidden="true"
                              class="ons-summary__button-text"
                            >
                              <a
                                href="/questionnaires/OPN2201A/allocation/allocate"
                                style="font-weight: normal;"
                              >
                                Allocate Cases to editors
                              </a>
                            </span>
                            <span
                              class="ons-u-vh"
                            >
                              Allocate Cases to editors
                            </span>
                          </dd>
                        </dl>
                      </div>
                    </div>
                  </div>
                </div>
                <hr />
              </div>
            </div>
          </details>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
    >
      <div
        class="ons-panel__body "
      >
        Bonjour tout le monde Jake Bullet
      </div>
    </div>
    <div
      data-testid="Surveys"
    >
      <br />
      <div
        class="ons-accordion"
        id="accordion"
      >
        <button
          class="ons-btn ons-js-collapsible-all ons-u-mb-s ons-btn--secondary ons-btn--small"
          data-close-all="Hide all"
          data-group="accordion"
          data-testid="accordion-show-all"
          type="button"
        >
          <span
            class="ons-btn__inner ons-js-collapsible-all-inner"
          >
            Show all
          </span>
        </button>
        <details
          class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
          data-btn-close="Hide"
          data-group="accordion"
          id="accordion-0"
        >
          <summary
            aria-controls="accordion-0"
            aria-expanded="false"
            class="ons-collapsible__heading ons-js-collapsible-heading"
            data-ga-action="Open panel"
            data-testid="accordion-0-heading"
            role="link"
            tabindex="0"
          >
            <div
              class="ons-collapsible__controls"
            >
              <h2
                class="ons-collapsible__title"
              >
                LMS
              </h2>
              <span
                class="ons-collapsible__icon"
              >
                <svg
                  class="ons-svg-icon"
                  focusable="false"
                  viewBox="0 0 7.5 12.85"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                    transform="translate(-5.02 -1.59)"
                  />
                </svg>
              </span>
            </div>
          </summary>
          <div
            aria-hidden="true"
            class="ons-collapsible__content ons-js-collapsible-content"
            data-testid="accordion-0-content"
            id="accordion-0-content"
          >
            <div>
              <br />
              <div
                class="ons-summary"
              >
                <div
                  class="ons-summary__group"
                  id="turnover"
                >
                  <h2
                    class="ons-summary__group-title"
                  >
                    LMS2101_AA1
                  </h2>
                  <div
                    class="ons-summary__items"
                  >
                    <div
                      class="ons-summary__item"
                      id="sales-dates-row"
                    >
                      <dl
                        class="ons-summary__row ons-summary__row--has-values"
                        id="sales-dates"
                      >
                        <dt
                          class="ons-summary__item-title"
                        >
                          <div
                            class="ons-summary__item--text"
                          >
                            Cases Allocted
                          </div>
                        </dt>
                        <dd
                          class="ons-summary__values"
                        >
                          <span
                            class="ons-summary__text"
                          >
                            3
                          </span>
                        </dd>
                        <dd
                          class="ons-summary__actions"
                        >
                          <span
                            aria-hidden="true"
                            class="ons-summary__button-text"
                          >
                            <a
                              href="/questionnaires/LMS2101_AA1/allocation/allocated"
                              style="font-weight: normal;"
                            >
                              Cases allocated to editors
                            </a>
                          </span>
                          <span
                            class="ons-u-vh"
                          >
                            Cases allocated to editors
                          </span>
                        </dd>
                      </dl>
                    </div>
                    <div
                      class="ons-summary__item"
                      id="sales-value-row"
                    >
                      <dl
                        class="ons-summary__row ons-summary__row--has-values"
                        id="sales-value"
                      >
                        <dt
                          class="ons-summary__item-title"
                        >
                          <div
                            class="ons-summary__item--text"
                          >
                            Cases left to allocate
                          </div>
                        </dt>
                        <dd
                          class="ons-summary__values"
                        >
                          <span
                            class="ons-summary__text"
                          >
                            0
                             
                          </span>
                        </dd>
                        <dd
                          class="ons-summary__actions"
                        >
                          <span
                            aria-hidden="true"
                            class="ons-summary__button-text"
                          >
                            <a
                              href="/questionnaires/LMS2101_AA1/allocation/allocate"
                              style="font-weight: normal;"
                            >
                              Allocate Cases to editors
                            </a>
                          </span>
                          <span
                            class="ons-u-vh"
                          >
                            Allocate Cases to editors
                          </span>
                        </dd>
                      </dl>
                    </div>
                  </div>
                </div>
              </div>
              <hr />
            </div>
            <div>
              <br />
              <div
                class="ons-summary"
              >
                <div
                  class="ons-summary__group"
                  id="turnover"
                >
                  <h2
                    class="ons-summary__group-title"
                  >
                    LMS2101_AB1
                  </h2>
                  <div
                    class="ons-summary__items"
                  >
                    <div
                      class="ons-summary__item"
                      id="sales-dates-row"
                    >
                      <dl
                        class="ons-summary__row ons-summary__row--has-values"
                        id="sales-dates"
                      >
                        <dt
                          class="ons-summary__item-title"
                        >
                          <div
                            class="ons-summary__item--text"
                          >
                            Cases Allocted
                          </div>
                        </dt>
                        <dd
                          class="ons-summary__values"
                        >
                          <span
                            class="ons-summary__text"
                          >
                            1
                          </span>
                        </dd>
                        <dd
                          class="ons-summary__actions"
                        >
                          <span
                            aria-hidden="true"
                            class="ons-summary__button-text"
                          >
                            <a
                              href="/questionnaires/LMS2101_AB1/allocation/allocated"
                              style="font-weight: normal;"
                            >
                              Cases allocated to editors
                            </a>
                          </span>
                          <span
                            class="ons-u-vh"
                          >
                            Cases allocated to editors
                          </span>
                        </dd>
                      </dl>
                    </div>
                    <div
                      class="ons-summary__item"
                      id="sales-value-row"
                    >
                      <dl
                        class="ons-summary__row ons-summary__row--has-values"
                        id="sales-value"
                      >
                        <dt
                          class="ons-summary__item-title"
                        >
                          <div
                            class="ons-summary__item--text"
                          >
                            Cases left to allocate
                          </div>
                        </dt>
                        <dd
                          class="ons-summary__values"
                        >
                          <span
                            class="ons-summary__text"
                          >
                            0
                             
                          </span>
                        </dd>
                        <dd
                          class="ons-summary__actions"
                        >
                          <span
                            aria-hidden="true"
                            class="ons-summary__button-text"
                          >
                            <a
                              href="/questionnaires/LMS2101_AB1/allocation/allocate"
                              style="font-weight: normal;"
                            >
                              Allocate Cases to editors
                            </a>
                          </span>
                          <span
                            class="ons-u-vh"
                          >
                            Allocate Cases to editors
                          </span>
                        </dd>
                      </dl>
                    </div>
                  </div>
                </div>
              </div>
              <hr />
            </div>
            <div>
              <br />
              <div
                class="ons-summary"
              >
                <div
                  class="ons-summary__group"
                  id="turnover"
                >
                  <h2
                    class="ons-summary__group-title"
                  >
                    LMS2101_AC1
                  </h2>
                  <div
                    class="ons-summary__items"
                  >
                    <div
                      class="ons-summary__item"
                      id="sales-dates-row"
                    >
                      <dl
                        class="ons-summary__row ons-summary__row--has-values"
                        id="sales-dates"
                      >
                        <dt
                          class="ons-summary__item-title"
                        >
                          <div
                            class="ons-summary__item--text"
                          >
                            Cases Allocted
                          </div>
                        </dt>
                        <dd
                          class="ons-summary__values"
                        >
                          <span
                            class="ons-summary__text"
                          >
                            0
                          </span>
                        </dd>
                        <dd
                          class="ons-summary__actions"
                        >
                          <span
                            aria-hidden="true"
                            class="ons-summary__button-text"
                          >
                            <a
                              href="/questionnaires/LMS2101_AC1/allocation/allocated"
                              style="font-weight: normal;"
                            >
                              Cases allocated to editors
                            </a>
                          </span>
                          <span
                            class="ons-u-vh"
                          >
                            Cases allocated to editors
                          </span>
                        </dd>
                      </dl>
                    </div>
                    <div
                      class="ons-summary__item"
                      id="sales-value-row"
                    >
                      <dl
                        class="ons-summary__row ons-summary__row--has-values"
                        id="sales-value"
                      >
                        <dt
                          class="ons-summary__item-title"
                        >
                          <div
                            class="ons-summary__item--text"
                          >
                            Cases left to allocate
                          </div>
                        </dt>
                        <dd
                          class="ons-summary__values"
                        >
                          <span
                            class="ons-summary__text"
                          >
                            0
                             
                          </span>
                        </dd>
                        <dd
                          class="ons-summary__actions"
                        >
                          <span
                            aria-hidden="true"
                            class="ons-summary__button-text"
                          >
                            <a
                              href="/questionnaires/LMS2101_AC1/allocation/allocate"
                              style="font-weight: normal;"
                            >
                              Allocate Cases to editors
                            </a>
                          </span>
                          <span
                            class="ons-u-vh"
                          >
                            Allocate Cases to editors
                          </span>
                        </dd>
                      </dl>
                    </div>
                  </div>
                </div>
              </div>
              <hr />
            </div>
          </div>
        </details>
        <details
          class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
          data-btn-close="Hide"
          data-group="accordion"
          id="accordion-1"
        >
          <summary
            aria-controls="accordion-1"
            aria-expanded="false"
            class="ons-collapsible__heading ons-js-collapsible-heading"
            data-ga-action="Open panel"
            data-testid="accordion-1-heading"
            role="link"
            tabindex="0"
          >
            <div
              class="ons-collapsible__controls"
            >
              <h2
                class="ons-collapsible__title"
              >
                OPN
              </h2>
              <span
                class="ons-collapsible__icon"
              >
                <svg
                  class="ons-svg-icon"
                  focusable="false"
                  viewBox="0 0 7.5 12.85"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                    transform="translate(-5.02 -1.59)"
                  />
                </svg>
              </span>
            </div>
          </summary>
          <div
            aria-hidden="true"
            class="ons-collapsible__content ons-js-collapsible-content"
            data-testid="accordion-1-content"
            id="accordion-1-content"
          >
            <div>
              <br />
              <div
                class="ons-summary"
              >
                <div
                  class="ons-summary__group"
                  id="turnover"
                >
                  <h2
                    class="ons-summary__group-title"
                  >
                    OPN2201A
                  </h2>
                  <div
                    class="ons-summary__items"
                  >
                    <div
                      class="ons-summary__item"
                      id="sales-dates-row"
                    >
                      <dl
                        class="ons-summary__row ons-summary__row--has-values"
                        id="sales-dates"
                      >
                        <dt
                          class="ons-summary__item-title"
                        >
                          <div
                            class="ons-summary__item--text"
                          >
                            Cases Allocted
                          </div>
                        </dt>
                        <dd
                          class="ons-summary__values"
                        >
                          <span
                            class="ons-summary__text"
                          >
                            3
                          </span>
                        </dd>
                        <dd
                          class="ons-summary__actions"
                        >
                          <span
                            aria-hidden="true"
                            class="ons-summary__button-text"
                          >
                            <a
                              href="/questionnaires/OPN2201A/allocation/allocated"
                              style="font-weight: normal;"
                            >
                              Cases allocated to editors
                            </a>
                          </span>
                          <span
                            class="ons-u-vh"
                          >
                            Cases allocated to editors
                          </span>
                        </dd>
                      </dl>
                    </div>
                    <div
                      class="ons-summary__item"
                      id="sales-value-row"
                    >
                      <dl
                        class="ons-summary__row ons-summary__row--has-values"
                        id="sales-value"
                      >
                        <dt
                          class="ons-summary__item-title"
                        >
                          <div
                            class="ons-summary__item--text"
                          >
                            Cases left to allocate
                          </div>
                        </dt>
                        <dd
                          class="ons-summary__values"
                        >
                          <span
                            class="ons-summary__text"
                          >
                            0
                             
                          </span>
                        </dd>
                        <dd
                          class="ons-summary__actions"
                        >
                          <span
                            aria-hidden="true"
                            class="ons-summary__button-text"
                          >
                            <a
                              href="/questionnaires/OPN2201A/allocation/allocate"
                              style="font-weight: normal;"
                            >
                              Allocate Cases to editors
                            </a>
                          </span>
                          <span
                            class="ons-u-vh"
                          >
                            Allocate Cases to editors
                          </span>
                        </dd>
                      </dl>
                    </div>
                  </div>
                </div>
              </div>
              <hr />
            </div>
          </div>
        </details>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given there the blaise rest api is not available should render the page correctly for the user when an error occurs 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          Bonjour tout le monde Jake Bullet
        </div>
      </div>
      <div
        data-testid="Surveys"
      >
        <div
          class="ons-panel ons-panel--error ons-panel--no-title  ons-u-mt-m"
        >
          <div
            class="ons-panel__body "
          >
            try again in a few minutes
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
    >
      <div
        class="ons-panel__body "
      >
        Bonjour tout le monde Jake Bullet
      </div>
    </div>
    <div
      data-testid="Surveys"
    >
      <div
        class="ons-panel ons-panel--error ons-panel--no-title  ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          try again in a few minutes
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
